CSS Fix: Loader message alignment

--- a/style.css
+++ b/style.css
@@ -367,8 +367,9 @@ a:visited {
 
 .loader__msg {
   font-size: 14px;
-  margin-top: 20px;
   color: var(--color-brand--2);
+  margin: 20px 50px;
+  text-align: center;
 }
 
 .lds-ripple {
@@ -420,6 +421,7 @@ a:visited {
   font-size: 14px;
   cursor: pointer;
   transform: translateX(-42%);
+  text-align: center;
 
   transition: all 0.5s;
 }
